--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@headlessui/react": "^1.6.4",
     "phosphor-react": "^1.4.1",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "scheduler": "^0.22.0",
+    "use-context-selector": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
